<resources>
    <string name="app_name">Tindeo</string>
    <string name="welcome">Hi! Welcome to Tindeo</string>
    <string name="sign_up">SIGN UP</string>
    <string name="login">LOGIN</string>
    <string name="team_name">KHTeam</string>
    <string name="search_hint">Search</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_phone">Enter your phone number</string>
    <string name="enter_pass">Enter your password</string>
    <string name="resend_code"><u>Resend verification code</u></string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string-array name="gender_array">
        <item>none</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="sexual_array">
        <item>none</item>
        <item>Straight</item>
        <item>Gay</item>
        <item>Lesbian</item>
        <item>Bisexual</item>
        <item>Asexual</item>
    </string-array>
    <string-array name="gender_show_array">
        <item>Everyone</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="vn_cities_array">
        <item>Hà Nội</item>
        <item>Hồ Chí Minh</item>
        <item>Đắk Lắk</item>
        <item>Hà Tĩnh</item>
        <item>Điện Biên</item>
        <item>Nghệ An</item>
        <item>Tiền Giang</item>
        <item>Hải Phòng</item>
        <item>An Giang</item>
        <item>Bà Rịa - Vũng Tàu</item>
        <item>Bắc Giang</item>
        <item>Bắc Kạn</item>
        <item>Bạc Liêu</item>
        <item>Bắc Ninh</item>
        <item>Bến Tre</item>
        <item>Bình Định</item>
        <item>Bình Dương</item>
        <item>Bình Phước</item>
        <item>Bình Thuận</item>
        <item>Cà Mau</item>
        <item>Cao Bằng</item>
        <item>Đắk Nông</item>
        <item>Đồng Nai</item>
        <item>Đồng Tháp</item>
        <item>Gia Lai</item>
        <item>Hà Giang</item>
        <item>Hà Nam</item>
        <item>Hải Dương</item>
        <item>Hậu Giang</item>
        <item>Hòa Bình</item>
        <item>Hưng Yên</item>
        <item>Khánh Hòa</item>
        <item>Kiên Giang</item>
        <item>Kon Tum</item>
        <item>Lai Châu</item>
        <item>Lâm Đồng</item>
        <item>Lạng Sơn</item>
        <item>Lào Cai</item>
        <item>Long An</item>
        <item>Nam Định</item>
        <item>Ninh Bình</item>
        <item>Ninh Thuận</item>
        <item>Phú Thọ</item>
        <item>Quảng Bình</item>
        <item>Quảng Nam</item>
        <item>Quảng Ngãi</item>
        <item>Quảng Ninh</item>
        <item>Quảng Trị</item>
        <item>Sóc Trăng</item>
        <item>Sơn La</item>
        <item>Tây Ninh</item>
        <item>Thái Bình</item>
        <item>Thái Nguyên</item>
        <item>Thanh Hóa</item>
        <item>Thừa Thiên Huế</item>
        <item>Trà Vinh</item>
        <item>Tuyên Quang</item>
        <item>Vĩnh Long</item>
        <item>Vĩnh Phúc</item>
        <item>Yên Bái</item>
        <item>Phú Yên</item>
        <item>Cần Thơ</item>
        <item>Đà Nẵng</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>