<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fontFamily="@font/poppins_regular"
    tools:context=".login">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <LinearLayout
        android:id="@+id/ll_login_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:srcCompat="@drawable/logo_dating" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="12pt"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_regular"
        android:text="Login to Tindeo"
        android:textColor="@color/black"
        android:textSize="10pt"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/ll_login_header" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center_vertical"
        android:text="We're happy to see you back !"
        android:textColor="@color/black"
        android:textSize="8pt"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/sign_in" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutTextLogEmail"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTexLogEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:background="@drawable/rectangle_box"
            android:drawableStart="@drawable/baseline_mail_outline_32"
            android:drawablePadding="8dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutTextLogPass"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_pass"
        android:textColor="@color/secondary1"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/layoutTextLogEmail"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextLogPassword"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_box"
            android:drawableStart="@drawable/baseline_password_24"
            android:drawablePadding="8dp"
            android:password="true"
            tools:ignore="Deprecated" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/logbutton"
        android:layout_width="360dp"
        android:layout_height="65dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rectangle_box"
        android:backgroundTint="@color/primary"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutTextLogPass" />

    <LinearLayout
        android:id="@+id/ll_dont_have_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logbutton">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:gravity="center"
            android:text="Don't have an account?"
            android:textColor="#808080" />

        <TextView
            android:id="@+id/logsignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/primary"
            android:textStyle="bold" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>